Modified build.gradle, fixes java.lang.illegalAccessError