@@ -10,6 +10,21 @@ javafx {
     modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing']
 }
 
+run {
+    mainClassName = 'com.jfxbase/com.jfxbase.sample.Main'
+    applicationDefaultJvmArgs += [
+            "--add-opens", "javafx.graphics/javafx.css=ALL-UNNAMED",
+            "--add-opens", "javafx.base/com.sun.javafx.runtime=ALL-UNNAMED",
+            "--add-opens", "javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+            "--add-opens", "javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+            "--add-opens", "javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+            "--add-opens", "javafx.base/com.sun.javafx.event=ALL-UNNAMED",
+            "--add-opens", "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+            "--add-opens", "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+          ]
+}
+
+
 group 'ecdar'
 if (project.hasProperty('ecdarVersion')) {
     version = project.ecdarVersion
@@ -39,6 +54,8 @@ task fatJar(type: Jar) {
 repositories {
     mavenCentral()
 }
+
+
 
 def grpcVersion = '1.41.0' // CURRENT_GRPC_VERSION
 def protobufVersion = '3.17.2'
